fixes mobile spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7883,6 +7883,12 @@ select.list-dt:focus {
   }
 }
 
+@media screen and (max-width: 575px) {
+  #otp-modal .otp-boxes {
+    margin-bottom: 1rem;
+  }
+}
+
 @media screen and (max-width: 768px) {
   #otp-modal {
     padding-top: 9rem;
